test namespace change for supabase install

--- a/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
+++ b/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
       sourceRef:
         kind: GitRepository
         name: supabase-community
-        namespace: supbase
+        namespace: flux-system
   values:
     secret:
       jwt:
