--- a/components/helmreleases/supabase/24.03.03/base/kustomization.yaml
+++ b/components/helmreleases/supabase/24.03.03/base/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+## TODO: Fix to supabase namespace
 resources:
   - namespace.yaml
   - helmrepository.yaml
