attempt to fix to flux-system

--- a/components/helmreleases/supabase/24.03.03/aks/secrets.yaml
+++ b/components/helmreleases/supabase/24.03.03/aks/secrets.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: supabase-jwt
+   namespace: flux-system
 type: Opaque
 stringData:
   secret: "your-super-secret-jwt-token-with-at-least-32-characters-long"
@@ -12,6 +13,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: supabase-smtp
+   namespace: flux-system
 type: Opaque
 stringData:
   username: "your-smtp-username"
@@ -21,6 +23,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: supabase-dashboard
+   namespace: flux-system
 type: Opaque
 stringData:
   username: "supabase"
@@ -30,6 +33,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: supabase-db
+   namespace: flux-system
 type: Opaque
 stringData:
   username: "postgres"
