--- a/components/helmreleases/supabase/24.03.03/aks/secrets.yaml
+++ b/components/helmreleases/supabase/24.03.03/aks/secrets.yaml
@@ -36,6 +36,6 @@ metadata:
   namespace: flux-system
 type: Opaque
 stringData:
-  username: "postgres"
+  username: "supabase_admin"
   password: "your-super-secret-and-long-postgres-password"
   database: "postgres"
