--- a/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
+++ b/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
@@ -43,7 +43,7 @@ spec:
       environment:
         STUDIO_DEFAULT_ORGANIZATION: "My Organization"
         STUDIO_DEFAULT_PROJECT: "My Project"
-        SUPABASE_PUBLIC_URL: http://example.com/
+        SUPABASE_PUBLIC_URL: supabase-supabase-kong.flux-system.svc.cluster.local
         NEXT_PUBLIC_ENABLE_LOGS: "true"
       livenessProbe:
         httpGet:
@@ -55,14 +55,14 @@ spec:
       image:
         tag: v2.145.0
       environment:
-        API_EXTERNAL_URL: http://example.com
-        GOTRUE_SITE_URL: http://example.com
+        API_EXTERNAL_URL: supabase-supabase-kong.flux-system.svc.cluster.local
+        GOTRUE_SITE_URL: supabase-supabase-kong.flux-system.svc.cluster.local
         GOTRUE_EXTERNAL_EMAIL_ENABLED: "true"
         GOTRUE_MAILER_AUTOCONFIRM: "true"
-        GOTRUE_SMTP_ADMIN_EMAIL: "your-mail@example.com"
-        GOTRUE_SMTP_HOST: "smtp.example.com"
+        GOTRUE_SMTP_ADMIN_EMAIL: "your-mail@supabase-supabase-kong.flux-system.svc.cluster.local"
+        GOTRUE_SMTP_HOST: "smtp.supabase-supabase-kong.flux-system.svc.cluster.local"
         GOTRUE_SMTP_PORT: "587"
-        GOTRUE_SMTP_SENDER_NAME: "your-mail@example.com"
+        GOTRUE_SMTP_SENDER_NAME: "your-mail@supabase-supabase-kong.flux-system.svc.cluster.local"
     
     rest:
       image:
