--- a/clusters/aks/stackweb/kustomization.yaml
+++ b/clusters/aks/stackweb/kustomization.yaml
@@ -1,7 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - crds.yaml
-  - system.yaml
-  - stackweb.yaml
-  - stackend.yaml
+  - ../../../components/kustomizations/stackend/VERSION/aks/
