--- a/clusters/aks/kustomization.yaml
+++ b/clusters/aks/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - celery.yaml
   - crds.yaml
   - system.yaml
   - stackweb.yaml
