--- a/components/kustomizations/celery/VERSION/base/kustomization.yaml
+++ b/components/kustomizations/celery/VERSION/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: celery
 resources:
+  - namespace.yaml
   - stackend--env.yaml #TODO
   - celery-worker-cm0-configmap.yaml
   - celery-worker-cm1-configmap.yaml
