--- a/components/kustomizations/stackweb/VERSION/base/kustomization.yaml
+++ b/components/kustomizations/stackweb/VERSION/base/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: stackweb
 resources:
+  - namespace.yaml
   - stackweb--env-configmap.yaml
   - stackweb-deployment.yaml
   - stackweb-service.yaml
