--- a/components/kustomizations/stackweb/VERSION/base/stackweb-deployment.yaml
+++ b/components/kustomizations/stackweb/VERSION/base/stackweb-deployment.yaml
@@ -29,4 +29,6 @@ spec:
           ports:
             - containerPort: 3000
               protocol: TCP
+      imagePullSecrets:
+        - name: acr-secret
       restartPolicy: Always
