--- a/components/kustomizations/stackweb/VERSION/base/stackweb-deployment.yaml
+++ b/components/kustomizations/stackweb/VERSION/base/stackweb-deployment.yaml
@@ -20,6 +20,13 @@ spec:
       labels:
         io.kompose.service: stackweb
     spec:
+      tolerations:
+        - key: workload
+          operator: Equal
+          value: memory-intensive
+          effect: NoSchedule
+      nodeSelector:
+        nodepool: memory-optimized
       containers:
         - envFrom:
             - configMapRef:
@@ -29,6 +36,13 @@ spec:
           ports:
             - containerPort: 3000
               protocol: TCP
+          resources:
+            requests:
+              cpu: "8"
+              memory: "16Gi"
+            limits:
+              cpu: "10"
+              memory: "20Gi"
       imagePullSecrets:
         - name: acr-secret
       restartPolicy: Always
