--- a/components/kustomizations/stackend/VERSION/base/stackend--env-configmap.yaml
+++ b/components/kustomizations/stackend/VERSION/base/stackend--env-configmap.yaml
@@ -78,9 +78,9 @@ data:
   PINECONE_ENV: ""
   POLYTOMIC_API_KEY: ""
   POPLARML_KEY: ""
-  POSTGRES_DB_HOST: supavisor
+  POSTGRES_DB_HOST: supabase-supabase-db.flux-system.svc.cluster.local
   POSTGRES_DB_NAME: postgres
-  POSTGRES_DB_PASSWORD: postgres
+  POSTGRES_DB_PASSWORD: "your-super-secret-and-long-postgres-password"
   POSTGRES_DB_PORT: "6543"
   POSTGRES_DB_USER: postgres
   PSPDFKIT_API_KEY: ""
