--- a/components/kustomizations/stackend/VERSION/base/kustomization.yaml
+++ b/components/kustomizations/stackend/VERSION/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: stackend
+namespace: flux-system # TODO: stackend
 resources:
   - namespace.yaml
   - stackend-service.yaml
