--- a/components/kustomizations/stackend/VERSION/base/kustomization.yaml
+++ b/components/kustomizations/stackend/VERSION/base/kustomization.yaml
@@ -9,3 +9,4 @@ resources:
   - stackend-cm1-configmap.yaml
   - stackend-cm2-configmap.yaml
   - stackend--env-configmap.yaml
+  - stackend-ingress.yaml
