--- a/components/kustomizations/stackweb/VERSION/base/stackweb-deployment.yaml
+++ b/components/kustomizations/stackweb/VERSION/base/stackweb-deployment.yaml
@@ -33,6 +33,7 @@ spec:
                 name: stackweb--env
           image: stackai.azurecr.io/stackai/stackweb:latest
           name: stackweb
+          command: ["/bin/sh", "-c", "npm run build && npm run start"]
           ports:
             - containerPort: 3000
               protocol: TCP
