--- a/components/kustomizations/stackweb/VERSION/base/stackweb-service.yaml
+++ b/components/kustomizations/stackweb/VERSION/base/stackweb-service.yaml
@@ -8,6 +8,8 @@ metadata:
     io.kompose.service: stackweb
   name: stackweb
 spec:
+  type: NodePort
+  externalTrafficPolicy: Local
   ports:
     - name: "3000"
       port: 3000
