--- a/components/kustomizations/stackweb/VERSION/base/stackweb-service.yaml
+++ b/components/kustomizations/stackweb/VERSION/base/stackweb-service.yaml
@@ -8,7 +8,7 @@ metadata:
     io.kompose.service: stackweb
   name: stackweb
 spec:
-  type: NodePort
+  type: LoadBalancer
   externalTrafficPolicy: Local
   ports:
     - name: "3000"
