--- a/components/kustomizations/stackweb/VERSION/base/stackweb-service.yaml
+++ b/components/kustomizations/stackweb/VERSION/base/stackweb-service.yaml
@@ -8,8 +8,7 @@ metadata:
     io.kompose.service: stackweb
   name: stackweb
 spec:
-  type: LoadBalancer
-  externalTrafficPolicy: Local
+  type: NodePort
   ports:
     - name: "3000"
       port: 3000
