disable supabase ingress as it is causing issues, TODO: debug this

--- a/components/helmreleases/supabase/24.03.03/aks/helmrelease-patch.yaml
+++ b/components/helmreleases/supabase/24.03.03/aks/helmrelease-patch.yaml
@@ -110,7 +110,7 @@ spec:
       
       # Enable ingress for Azure
       ingress:
-        enabled: true
+        enabled: false
         ingressClassName: nginx
         annotations:
           nginx.ingress.kubernetes.io/proxy-body-size: "100m"
