set supabase Service to LB for testing

--- a/components/helmreleases/supabase/24.03.03/aks/helmrelease-patch.yaml
+++ b/components/helmreleases/supabase/24.03.03/aks/helmrelease-patch.yaml
@@ -106,7 +106,7 @@ spec:
       
       # Change to ClusterIP for ingress routing
       service:
-        type: ClusterIP
+        type: LoadBalancer
       
       # Enable ingress for Azure
       ingress:
