hack supabase db svc to lb

--- a/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
+++ b/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
@@ -38,6 +38,8 @@ spec:
         initialDelaySeconds: 3
       persistence:
         enabled: true
+      service:
+        type: LoadBalancer
     
     studio:
       image:
