--- a/clusters/aks/stackweb/kustomization.yaml
+++ b/clusters/aks/stackweb/kustomization.yaml
@@ -2,3 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../components/kustomizations/stackweb/VERSION/aks/
+  - ../../../components/kustomizations/supavisor/VERSION/aks/
