set /users to go to stackend

--- a/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
+++ b/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
@@ -15,7 +15,7 @@ spec:
   rules:
     - http:
         paths:
-          - path: /api
+          - path: /users
             pathType: Prefix
             backend:
               service:
