--- a/components/helmreleases/supabase/24.03.03/aks/helmrelease-patch.yaml
+++ b/components/helmreleases/supabase/24.03.03/aks/helmrelease-patch.yaml
@@ -120,6 +120,8 @@ spec:
           nginx.ingress.kubernetes.io/cors-allow-origin: "*"
           nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
           nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,apikey,x-client-info"
+          # Disable global rewrite to prevent conflicts with other ingresses
+          nginx.ingress.kubernetes.io/rewrite-target: ""
         hosts:
           - paths:
               - path: /auth
