update mongodb image

--- a/components/helmreleases/mongodb/community-operator/2.0.3/base/helmrelease.yaml
+++ b/components/helmreleases/mongodb/community-operator/2.0.3/base/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
       pullPolicy: Always
     
     mongodb:
-      name: mongodb
+      name: library/mongodb
       repo: docker.io
     
     createResource: false
