--- a/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
+++ b/components/helmreleases/supabase/24.03.03/base/helmrelease.yaml
@@ -47,8 +47,8 @@ spec:
       environment:
         STUDIO_DEFAULT_ORGANIZATION: "My Organization"
         STUDIO_DEFAULT_PROJECT: "My Project"
-        SUPABASE_PUBLIC_URL: http://4.156.217.128:8000
-        SUPABASE_URL: http://4.156.217.128:8000
+        SUPABASE_PUBLIC_URL: http://4.255.32.138/
+        SUPABASE_URL: http://4.255.32.138/
         NEXT_PUBLIC_ENABLE_LOGS: "true"
       livenessProbe:
         httpGet:
@@ -60,15 +60,15 @@ spec:
       image:
         tag: v2.145.0
       environment:
-        API_EXTERNAL_URL: http://4.156.217.128:8000
-        SUPABASE_URL: http://4.156.217.128:8000
-        GOTRUE_SITE_URL: http://4.156.217.128:8000
+        API_EXTERNAL_URL: http://4.255.32.138/
+        SUPABASE_URL: http://4.255.32.138/
+        GOTRUE_SITE_URL: http://4.255.32.138/
         GOTRUE_EXTERNAL_EMAIL_ENABLED: "true"
         GOTRUE_MAILER_AUTOCONFIRM: "true"
-        GOTRUE_SMTP_ADMIN_EMAIL: "your-mail@4.156.217.128:8000"
-        GOTRUE_SMTP_HOST: "smtp.4.156.217.128:8000"
+        GOTRUE_SMTP_ADMIN_EMAIL: "your-mail@4.255.32.138/"
+        GOTRUE_SMTP_HOST: "smtp.4.255.32.138/"
         GOTRUE_SMTP_PORT: "587"
-        GOTRUE_SMTP_SENDER_NAME: "your-mail@4.156.217.128:8000"
+        GOTRUE_SMTP_SENDER_NAME: "your-mail@4.255.32.138/"
     
     rest:
       image:
