--- a/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
+++ b/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
@@ -78,3 +78,10 @@ spec:
                 name: stackend
                 port:
                   number: 8000
+          - path: /notifications
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
