add additional routes to stackend

--- a/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
+++ b/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
@@ -85,3 +85,17 @@ spec:
                 name: stackend
                 port:
                   number: 8000
+          - path: /profiles
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /agent-builder
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
