On prem aks checkpoint (#44)
* enable supabase-ingress

* set all /auth traffic to go to supabase

* set /users to go to stackend

* send all traffic via ingress

* attempt to disable global rewrite

* specifically send /auth/login to stackweb

* add additional routes to stackend

* send stackend traffic via ingress

* test which calls go where

* route more traffic via the ingress

* route more traffic via the ingress

* add trailing backslashes

* send more traffic via ingress

* even more via ingress

* fix fqdn

* try postgres/postgres for auth to db

* revert back, saw password error

* add onboarding to stackend routes

* update mongodb image

* set supabase svc to LB for test/setup

* set supabase to lb ip for auth user creation

* Add Flux sync manifests

* add /auth/sso for stackweb

* set supabase lb ip for user auth

* during lb hack, need to be port 8000.  Once deployed via ingress, needs to be port 80

* now set to ingress on port 80 for full functionality

* set ips to new ingress

* add additional routes to stackend

* add additional routes to stackend

* add additional routes to stackend

* add additional routes to stackend

---------

Co-authored-by: Curtis Goolsby <curtisgoolsby@Curtiss-MacBook-Pro.local>
Co-authored-by: Flux <>

--- a/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
+++ b/components/kustomizations/stackend/VERSION/base/stackend-ingress.yaml
@@ -15,7 +15,84 @@ spec:
   rules:
     - http:
         paths:
-          - path: /api
+          - path: /users
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /organizations
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /roles
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /onboarding
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /projects
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /folders
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /connections
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /config
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /knowledge_bases
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /notifications
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /profiles
+            pathType: Prefix
+            backend:
+              service:
+                name: stackend
+                port:
+                  number: 8000
+          - path: /agent-builder
             pathType: Prefix
             backend:
               service:
