add job to run db table migration on startup

--- a/components/kustomizations/stackend/VERSION/base/kustomization.yaml
+++ b/components/kustomizations/stackend/VERSION/base/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
   - stackend-cm2-configmap.yaml
   - stackend--env-configmap.yaml
   - stackend-ingress.yaml
+  - stackend-migration-job.yaml
