--- a/components/kustomizations/stackend/VERSION/aks/kustomization.yaml
+++ b/components/kustomizations/stackend/VERSION/aks/kustomization.yaml
@@ -3,3 +3,6 @@ kind: Kustomization
 namespace: flux-system # TODO :stackend
 resources:
   - ../base
+
+patchesStrategicMerge:
+  - stackend-migration-job-patch.yaml
