--- a/clusters/aks/duct_tape/acr-secret.yaml
+++ b/clusters/aks/duct_tape/acr-secret.yaml
@@ -5,6 +5,6 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 data:
   # This is a full dockerconfigjson:
-  # {"auths":{"stackai.azurecr.io":{"username":"curtis-k8s-development","password":"VALUE","email":"noreply@stackai.com","auth":"VALUE"}}}
+  # {"auths":{"stackai.azurecr.io":{"username":"VALUE","password":"VALUE"}}}
   # cat acr.credentials.file | base64
   .dockerconfigjson: VALUE
