On prem aks checkpoint (#42)
* set correct k8s resolution, even though known bug in said resolution

* initial scaffold for celery/stackweb/stackend

* add celery to default aks cluster

* add namespaces

* Add ACR pull secret-ref to enable pulling images

* instantiate celery/stackweb

* celery flavor kustomization fill-out

* update stackend configmap

* fix celery kustomization

* do not open port 8000 as we're not needing to use this workaround

* add a mongo deployment to base so an actual DB comes up

* more sane startup values

* add redis_us_east_url value

* adds memory optimized nodes for handling stackend/stackweb

* adds tolerations to allow scheduling to memory-optimized nodes

* fit to nodes

* set env to development

* set leaderboard url

* remove stackai liscense from envs in prep for next commit

* read from secret

* update pg env vars for stackend

* line up db port with supabase deployment

* change stackend into flux-system ns

* move stackweb into flux-system and write in some env vars

* test via public ip instead of k8s dns

* set supabase kong back to k8s dns and set stackend properly to stackend svc

* set stackweb service to a LB

* test via external ip

* test via cluster-ip

* test via extra port-forward

* open port 8000

* initial nginx-ingress component

* install into cluster

* add ingresses

* swap supabase to use ingress as well

* fix annotations

* open ports for ingress

* fix supabase ingress route

* set back to k8s networking

* build and run at pod start

* improve start command

* fix supabase ingress pathing

* set external traffic policy

* try as LB

* change trafficpolicy

* set namespace label to match network policy

* Add Network Policy to allow nginx-ingress traffic to flow to stack-ai pods

* set /api to call stackend

* correct kustomization path/filename

* check if the /auth page being blank is because stackend is prod and stackweb set to dev

* test running as dev instead of standalone for /auth endpoint issu

--- a/clusters/aks/system/kustomization.yaml
+++ b/clusters/aks/system/kustomization.yaml
@@ -2,6 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../components/helmreleases/mongodb/community-operator/2.0.3/aks
+  - ../../../components/helmreleases/nginx-ingress-controller/4.12.0/aks
   - ../../../components/helmreleases/redis/21.2.14/aks
   - ../../../components/helmreleases/supabase/24.03.03/aks
   - ../../../components/helmreleases/weaviate/17.5.0/aks
+
+  # network policies
+  - ../../../components/kustomizations/network-policies/0.0.1/aks
