--- a/components/helmreleases/nginx-ingress-controller/4.12.0/aks/kustomization.yaml
+++ b/components/helmreleases/nginx-ingress-controller/4.12.0/aks/kustomization.yaml
@@ -1,8 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: flux-system # TODO :stackend
+namespace: nginx-ingress
 resources:
   - ../base
-
 patchesStrategicMerge:
-  - stackend-migration-job-patch.yaml
+  - helmrelease-patch.yaml
