--- a/components/helmreleases/nginx-ingress-controller/4.12.0/base/kustomization.yaml
+++ b/components/helmreleases/nginx-ingress-controller/4.12.0/base/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: nginx-ingress
 resources:
   - namespace.yaml
-  - mongo-deployment.yaml
   - helmrepository.yaml
   - helmrelease.yaml
