create new kustomization for intermediate supabase setup steps

--- a/components/kustomizations/supabase-setup/VERSION/base/stackend-migration-job.yaml
+++ b/components/kustomizations/supabase-setup/VERSION/base/stackend-migration-job.yaml
@@ -23,8 +23,8 @@ spec:
           command: ["/bin/sh", "-c"]
           args:
             - |
-              echo "sleeping for 5 minutes before beginning"
-              sleep 300
+              echo "sleeping for 1 minute before beginning"
+              sleep 60
               echo "Running database migrations..."
               cd infra/migrations/postgres && alembic upgrade head
               echo "Database migrations completed successfully"
@@ -37,18 +37,6 @@ spec:
                 secretKeyRef:
                   name: stackend-licence-secret
                   key: licence
-          volumeMounts:
-            - mountPath: /app/src/apps/config/llm_config.toml
-              name: stackend-cm0
-              readOnly: true
-              subPath: llm_config.toml
-            - mountPath: /app/src/apps/config/llm_models_by_providers/llm_local_config.toml
-              name: stackend-cm1
-              subPath: llm_local_config.toml
-            - mountPath: /app/src/apps/config/embeddings_config.toml
-              name: stackend-cm2
-              readOnly: true
-              subPath: embeddings_config.toml
           resources:
             requests:
               cpu: "1"
@@ -59,23 +47,4 @@ spec:
       imagePullSecrets:
         - name: acr-secret
       restartPolicy: OnFailure
-      volumes:
-        - configMap:
-            items:
-              - key: llm_config.toml
-                path: llm_config.toml
-            name: stackend-cm0
-          name: stackend-cm0
-        - configMap:
-            items:
-              - key: llm_local_config.toml
-                path: llm_local_config.toml
-            name: stackend-cm1
-          name: stackend-cm1
-        - configMap:
-            items:
-              - key: embeddings_config.toml
-                path: embeddings_config.toml
-            name: stackend-cm2
-          name: stackend-cm2
   backoffLimit: 3
