--- a/clusters/aks/supabase-setup.yaml
+++ b/clusters/aks/supabase-setup.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: stackweb
+  name: supabase-setup
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./clusters/aks/stackweb/
+  path: ./clusters/aks/supabase-setup/
   prune: true
   sourceRef:
     kind: GitRepository
@@ -18,5 +18,3 @@ spec:
     - name: flux-system
     - name: crds
     - name: system
-    - name: supabase-setup
-    - name: stackend
