--- a/components/kustomizations/configuration-setup/VERSION/base/kustomization.yaml
+++ b/components/kustomizations/configuration-setup/VERSION/base/kustomization.yaml
@@ -1,5 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: flux-system # TODO: stackend
+namespace: flux-system 
 resources:
+  - stackend--env-configmap.yaml
+  - stackweb--env-configmap.yaml
   - stackend-migration-job.yaml
