--- a/clusters/aks/configuration-setup.yaml
+++ b/clusters/aks/configuration-setup.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: supabase-setup
+  name: configuration-setup
   namespace: flux-system
 spec:
   interval: 10m0s
